* make DistUpgadeConfigParser -> DistUpgradeConfig

--- a/DistUpgrade/DistUpgrade.cfg
+++ b/DistUpgrade/DistUpgrade.cfg
@@ -1,3 +1,6 @@
+[General]
+Frontend=GtkDistUpgradeView
+
 # Distro contains global information about the upgrade
 [Distro]
 # the meta-pkgs we support
