* added ivman to forced obsoletes for kubuntu

--- a/DistUpgrade/DistUpgrade.cfg
+++ b/DistUpgrade/DistUpgrade.cfg
@@ -15,6 +15,7 @@ ForcedObsoletes=xscreensaver
 
 [kubuntu-desktop]
 KeyDependencies=kdm, kicker, kubuntu-artwork-usplash
+ForcedObsoletes=ivman
 
 [edubuntu-desktop]
 KeyDependencies=edubuntu-artwork, tuxpaint
