* added MaxRetries to the configuration, retry on update errors as well

--- a/DistUpgrade/DistUpgrade.cfg
+++ b/DistUpgrade/DistUpgrade.cfg
@@ -1,6 +1,3 @@
-[General]
-Frontend=GtkDistUpgradeView
-
 # Distro contains global information about the upgrade
 [Distro]
 # the meta-pkgs we support
@@ -32,3 +29,6 @@ From=breezy
 To=dapper
 ValidOrigin=Ubuntu
 ValidMirrors = http://archive.ubuntu.com/ubuntu, http://security.ubuntu.com/ubuntu, http://archive.distrosprint/ubuntu/
+
+[Network]
+MaxRetries=3
