* view can be configured via the config file now

--- a/DistUpgrade/DistUpgrade.cfg
+++ b/DistUpgrade/DistUpgrade.cfg
@@ -1,3 +1,7 @@
+[View]
+View=DistUpgradeViewGtk
+#View=DistUpgradeViewNonInteractive
+
 # Distro contains global information about the upgrade
 [Distro]
 # the meta-pkgs we support
