* prepared the non-interactive version

--- a/DistUpgrade/DistUpgrade.cfg
+++ b/DistUpgrade/DistUpgrade.cfg
@@ -1,6 +1,6 @@
 [View]
-View=DistUpgradeViewGtk
-#View=DistUpgradeViewNonInteractive
+#View=DistUpgradeViewGtk
+View=DistUpgradeViewNonInteractive
 
 # Distro contains global information about the upgrade
 [Distro]
