* Move the mime type handling of sources.lists to gnome-software-properties * Renamed mime type to text/x-apt-sources-list * Remove all depricated add-software-channel code * Add a schemas file for update-manager * Use dh_gconf
* Software Properties:
 - Move the channel buttons to the bottom of the notebook to get more
   vertical space for the channels
 - Set a global window icon for SoftwareProperties and its children
 - Add drag and drop support for sources.list on the treeview_sources
 - Allow to enable and disable channels
 - Do not use so much space for rendering the sources lista
 - Use the comment instead of the URI in the channel list if we don't
   find a nice name
 - Show the type only on source channels - "binary" is too technial
 - Add some small sanity checks to aptsources
 - Use single quotes in the predefind distru names

* Dialog add:
 - merge the custom and the default add dialog
 - sanity checks for the custom apt line, that do not allow
   to add a wrong one

* Update Manager:
 - add an option to hide the reload reminder

--- a/debian/rules
+++ b/debian/rules
@@ -64,6 +64,7 @@ binary-arch: build install
 	dh_scrollkeeper
 	dh_installmime
 	dh_desktop
+	dh_gconf
 	dh_installexamples
 #	dh_install
 #	dh_installmenu
