--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Build-Depends: debhelper (>= 4.0.0), libxml-parser-perl, scrollkeeper, intltool,
 Standards-Version: 3.6.1.1
 
 Package: update-manager
-Architecture: any
+Architecture: all
 Depends: ${python:Depends}, ${misc:Depends}, python, python-gnome2, python-glade2, python-apt (>= 0.6.15), synaptic (>= 0.57.8), lsb-release
 Description: GNOME application that manages apt updates
  This is the GNOME apt update manager. It checks for updates and lets the user
