--- a/channels/Ubuntu.info.in
+++ b/channels/Ubuntu.info.in
@@ -17,6 +17,40 @@ Component: multiverse
 Enabled: 0
 _CompDescription: Non-free (Multiverse)
 
+Suite: dapper-security
+RepositoryType: deb
+BaseURI: http://security.ubuntu.com/ubuntu/
+_Description: Ubuntu 6.04 Security Updates
+Component: main
+Enabled: 1
+_CompDescription: Oficially supported
+Component: restricted
+Enabled: 1
+_CompDescription: Restricted copyright
+Component: universe
+Enabled: 0
+_CompDescription: Community maintained (Universe)
+Component: multiverse
+Enabled: 0
+_CompDescription: Non-free (Multiverse)
+
+Suite: dapper-updates
+RepositoryType: deb
+BaseURI: http://archive.ubuntu.com/ubuntu/
+_Description: Ubuntu 6.04 Updates
+Component: main
+Enabled: 1
+_CompDescription: Oficially supported
+Component: restricted
+Enabled: 1
+_CompDescription: Restricted copyright
+Component: universe
+Enabled: 0
+_CompDescription: Community maintained (Universe)
+Component: multiverse
+Enabled: 0
+_CompDescription: Non-free (Multiverse)
+
 Suite: breezy
 RepositoryType: deb
 BaseURI: http://archive.ubuntu.com/ubuntu/
@@ -55,40 +89,6 @@ Suite: breezy-updates
 RepositoryType: deb
 BaseURI: http://archive.ubuntu.com/ubuntu/
 _Description: Ubuntu 5.10 Updates
-Component: main
-Enabled: 1
-_CompDescription: Oficially supported
-Component: restricted
-Enabled: 1
-_CompDescription: Restricted copyright
-Component: universe
-Enabled: 0
-_CompDescription: Community maintained (Universe)
-Component: multiverse
-Enabled: 0
-_CompDescription: Non-free (Multiverse)
-
-Suite: hoary
-RepositoryType: deb
-BaseURI: http://archive.ubuntu.com/ubuntu/
-_Description: Ubuntu 5.04 'Hoary Hedgehog'
-Component: main
-Enabled: 1
-_CompDescription: Oficially supported
-Component: restricted
-Enabled: 1
-_CompDescription: Restricted copyright
-Component: universe
-Enabled: 0
-_CompDescription: Community maintained (Universe)
-Component: multiverse
-Enabled: 0
-_CompDescription: Non-free (Multiverse)
-
-Suite: hoary-security
-RepositoryType: deb
-BaseURI: http://security.ubuntu.com/ubuntu/
-_Description: Ubuntu 5.04 Security Updates
 Component: main
 Enabled: 1
 _CompDescription: Oficially supported
