* Clean up the glade files: remove deprecated dialogs * Actually translate the software properties dialogs * Use spacings and alignemnts as suggested by the HIG in the dialogs * Make labels consistent with g-a-i

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,5 +1,4 @@
 [encoding: UTF-8]
-data/SoftwareProperties.glade
 SoftwareProperties/SoftwareProperties.py
 SoftwareProperties/dialog_sources_list.py
 DistUpgrade/DistUpgradeCache.py
@@ -9,6 +8,8 @@ DistUpgrade/DistUpgradeView.py
 DistUpgrade/dist-upgrade.py
 DistUpgrade/DistUpgrade.glade
 data/UpdateManager.glade
+data/SoftwareProperties.glade
+data/SoftwarePropertiesDialogs.glade
 data/update-manager.desktop.in
 data/update-manager.schemas.in
 [type: gettext/rfc822deb] channels/Ubuntu.info.in
