* use the tango system-software-update icon for update-manager * use the old update-manager icon for software-properties only * do not specify the file type of the icon in the desktop file * install the icons to the hicolor theme * remove the deprecated update-manager-logo - it will be replaced by   the svg version of update-manager

--- a/data/software-properties.desktop.in
+++ b/data/software-properties.desktop.in
@@ -3,7 +3,7 @@ _Name=Software Properties
 _GenericName=Software Properties
 _Comment=Configure software channels and internet updates
 Exec=gksu /usr/bin/software-properties
-Icon=update-manager
+Icon=software-properties
 Terminal=false
 X-MultipleArgs=false
 Type=Application
