--- a/DistUpgrade/DistUpgrade.cfg
+++ b/DistUpgrade/DistUpgrade.cfg
@@ -39,3 +39,10 @@ ValidMirrors = mirrors.txt
 
 [Network]
 MaxRetries=3
+
+
+[NonInteractive]
+BasePkg = ubuntu-desktop
+AdditionalPkgs = additional_pkgs.cfg
+Mirror = http://archive.ubuntu.com/ubuntu
+Proxy=http://127.0.0.1:3128/
