--- a/data/software-properties.desktop.in
+++ b/data/software-properties.desktop.in
@@ -1,7 +1,7 @@
 [Desktop Entry]
-_Name=Software Properties
-_GenericName=Software Properties
-_Comment=Configure software channels and internet updates
+_Name=Software Sources
+_GenericName=Software Sources
+_Comment=Configure the sources for installable software and updates
 Exec=gksu /usr/bin/software-properties
 Icon=software-properties
 Terminal=false
