* Add mime type to the desktop file of the software sources

--- a/data/software-properties.desktop.in
+++ b/data/software-properties.desktop.in
@@ -9,5 +9,6 @@ X-MultipleArgs=false
 Type=Application
 Encoding=UTF-8
 Categories=Application;System;Settings;
+MimeType=text/x-apt-sources-list
 X-KDE-SubstituteUID=true
 X-Ubuntu-Gettext-Domain=update-manager
