* DistUpgrade/DistUpgrade.cfg:   - remove libgl1-mesa on upgrade (can break upgrades)

--- a/DistUpgrade/DistUpgrade.cfg
+++ b/DistUpgrade/DistUpgrade.cfg
@@ -7,7 +7,7 @@ View=DistUpgradeViewGtk
 # the meta-pkgs we support
 MetaPkgs=ubuntu-desktop, kubuntu-desktop, edubuntu-desktop, xubuntu-desktop
 BaseMetaPkgs=ubuntu-minimal
-PostUpgradePurge=xorg-common
+PostUpgradePurge=xorg-common, libgl1-mesa
 Demotions=demoted.cfg
 
 # information about the individual meta-pkgs
