* DistUpgrade/DistUpgradeCache.py, DistUpgrade.cfg, README:   - added "RemoveEssentialOk" to control if certain essential package     are removed

--- a/DistUpgrade/DistUpgrade.cfg
+++ b/DistUpgrade/DistUpgrade.cfg
@@ -9,6 +9,7 @@ MetaPkgs=ubuntu-desktop, kubuntu-desktop, edubuntu-desktop, xubuntu-desktop
 BaseMetaPkgs=ubuntu-minimal
 PostUpgradePurge=xorg-common, libgl1-mesa
 Demotions=demoted.cfg
+RemoveEssentialOk=sysvinit
 
 # information about the individual meta-pkgs
 [ubuntu-desktop]
