* DistUpgrade/forced_obsoletes.txt:   - no longer needed, part of DistUpgrade.cfg now * DistUpgrade/mirrors.txt, DistUpgrade/removal_blacklist.txt:   - renamed for consitency * DistUpgrade/DistUpgrade.cfg, DistUpgrade/DistUpgradeCache.py:   - added "RemovalBlacklistFile" instead of hardcoding it * DistUpgrade/DistUpgradeConfigParser.py:   - added "datadir" to constructor * DistUpgrade/DistUpgradeControler.py:   - added datadir * DistUpgrade/DistUpgradeView.py:   - added "hideStep()" method   - added STEP_PREPARE, STEP_MODIFY_SOURCES, STEP_FETCH_INSTALL, STEP_CLEANUP, STEP_REBOOT * DistUpgrade/DistUpgradeViewGtk.py:   - implemendted hideStep()   - added datadir arguemnt for constructor * dist-upgrade.py   - run it with the "." as arguemnt for the config * UpdateManager/UpdateManager.py:   - if it can't be updated, ask about a dist-upgrade instead * update-manager.   - added --dist-upgrade * po/*.po   - make update-po

--- a/DistUpgrade/DistUpgrade.cfg
+++ b/DistUpgrade/DistUpgrade.cfg
@@ -10,6 +10,7 @@ BaseMetaPkgs=ubuntu-minimal
 PostUpgradePurge=xorg-common, libgl1-mesa
 Demotions=demoted.cfg
 RemoveEssentialOk=sysvinit
+RemovalBlacklistFile=removal_blacklist.cfg
 
 # information about the individual meta-pkgs
 [ubuntu-desktop]
@@ -36,7 +37,7 @@ BackupExt=distUpgrade
 From=dapper
 To=edgy
 ValidOrigin=Ubuntu
-ValidMirrors = mirrors.txt
+ValidMirrors = mirrors.cfg
 
 [Network]
 MaxRetries=3
