* DistUpgrade/DistUpgradeViewNonInteractive.py:   - added "ForceOverwrite=yes" option

--- a/DistUpgrade/DistUpgrade.cfg
+++ b/DistUpgrade/DistUpgrade.cfg
@@ -48,3 +48,4 @@ BasePkg = ubuntu-desktop
 AdditionalPkgs = additional_pkgs.cfg
 Mirror = http://archive.ubuntu.com/ubuntu
 Proxy=http://127.0.0.1:3128/
+ForceOverwrite=no
