* DistUpgrade/DistUpgradeControler.py:   - start a initial backports feature

--- a/DistUpgrade/DistUpgrade.cfg
+++ b/DistUpgrade/DistUpgrade.cfg
@@ -39,5 +39,9 @@ To=edgy
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 
+[Backports]
+Packages=apt,dpkg,python-apt
+DebLine=deb http://people.ubuntu.com/~mvo/backports/dapper/ /
+
 [Network]
 MaxRetries=3
