* DistUpgrade/DistUpgrade.cfg:   - added version identifier to the config to ensure that we get the right     version of backported packages (currently set to ~dapper) * DistUpgrade/DistUpgradeControler.py:   - check the versionlist of the backported packages to find the one we need

--- a/DistUpgrade/DistUpgrade.cfg
+++ b/DistUpgrade/DistUpgrade.cfg
@@ -41,7 +41,9 @@ ValidMirrors = mirrors.cfg
 
 [Backports]
 Packages=apt,dpkg,python-apt
+VersionIdent=~edgy
 DebLine=deb http://people.ubuntu.com/~mvo/backports/dapper/ /
+
 
 [Network]
 MaxRetries=3
