* DistUpgrade/DistUpgrade.cfg:   use ~dapper as identifier * DistUpgrade/DistUpgradeControler.py, DistUpgrade/dist-upgrade.py:   - add "--haveBackports" to skip parts of the procedure   - re-exec itself when all the backports are in place

--- a/DistUpgrade/DistUpgrade.cfg
+++ b/DistUpgrade/DistUpgrade.cfg
@@ -41,7 +41,7 @@ ValidMirrors = mirrors.cfg
 
 [Backports]
 Packages=apt,dpkg,python-apt
-VersionIdent=~edgy
+VersionIdent=~dapper
 DebLine=deb http://people.ubuntu.com/~mvo/backports/dapper/ /
 
 
