* DistUpgrade/backport-source.list:   - the sources.list fragment for the backports * DistUpgrade/DistUpgradeControler.py:   - run the backports fetching as early as possible

--- a/DistUpgrade/DistUpgrade.cfg
+++ b/DistUpgrade/DistUpgrade.cfg
@@ -42,7 +42,7 @@ ValidMirrors = mirrors.cfg
 [Backports]
 Packages=apt,dpkg,python-apt
 VersionIdent=~dapper
-DebLine=deb http://people.ubuntu.com/~mvo/backports/dapper/ /
+SourcesList=backport-source.list
 
 
 [Network]
