* DistUpgrade/DistUpgrade.cfg:   - use python2.4-apt * DistUpgrade/DistUpgradeControler.py:   -fix pathes

--- a/DistUpgrade/DistUpgrade.cfg
+++ b/DistUpgrade/DistUpgrade.cfg
@@ -40,7 +40,7 @@ ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 
 [Backports]
-Packages=apt,dpkg,python-apt
+Packages=apt,dpkg,python2.4-apt
 VersionIdent=~dapper
 SourcesList=backport-source.list
 
