--- a/DistUpgrade/DistUpgrade.cfg
+++ b/DistUpgrade/DistUpgrade.cfg
@@ -20,7 +20,7 @@ KeepInstalledSection=translations
 [ubuntu-desktop]
 KeyDependencies=gdm, gnome-panel, ubuntu-artwork
 # those pkgs will be marked remove right after the distUpgrade in the cache
-PostUpgradeRemove=xchat, xscreensaver
+PostUpgradeRemove=xscreensaver
 
 [kubuntu-desktop]
 KeyDependencies=kdm, kicker, kubuntu-artwork-usplash
