* DistUpgrade/DistUpgradeViewText.py:   - added for text-mode installs

--- a/DistUpgrade/DistUpgrade.cfg
+++ b/DistUpgrade/DistUpgrade.cfg
@@ -1,6 +1,7 @@
 [View]
 View=DistUpgradeViewGtk
 #View=DistUpgradeViewNonInteractive
+#View=DistUpgradeViewText
 
 # Distro contains global information about the upgrade
 [Distro]
