* DistUpgrade/DistUpgrade.cfg:   - add ubuntu-standard to the base packages * DistUpgrade/removal_blacklist.cfg:   - ubuntu-base is save to remove   - ubuntu-minimial and ubuntu-standard shouldn't be removed

--- a/DistUpgrade/DistUpgrade.cfg
+++ b/DistUpgrade/DistUpgrade.cfg
@@ -7,7 +7,7 @@ View=DistUpgradeViewGtk
 [Distro]
 # the meta-pkgs we support
 MetaPkgs=ubuntu-desktop, kubuntu-desktop, edubuntu-desktop, xubuntu-desktop
-BaseMetaPkgs=ubuntu-minimal
+BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
 PostUpgradePurge=xorg-common, libgl1-mesa
 Demotions=demoted.cfg
 RemoveEssentialOk=sysvinit
