* utils/demoted.cfg:   - updated to current edgy

--- a/utils/demoted.cfg
+++ b/utils/demoted.cfg
@@ -1,6 +1,9 @@
 # demoted packages
 blender
+bluez-hcidump
 bluez-pcmcia-support
+console-common
+console-data
 courier-authdaemon
 courier-base
 courier-doc
@@ -9,15 +12,62 @@ courier-imap-ssl
 courier-pop
 courier-pop-ssl
 courier-ssl
+cupsys-driver-gimpprint
+dh-consoledata
+doc-debian
+expat
+foomatic-db-gimp-print
+foomatic-db-gutenprint
 ftgl-dev
+g++-3.4
+g++-4.0
+gok
+gok-doc
+gtk2-engines-clearlooks
+gtk2-engines-crux
+gtk2-engines-highcontrast
+gtk2-engines-industrial
+gtk2-engines-lighthouseblue
+gtk2-engines-mist
+gtk2-engines-pixbuf
+gtk2-engines-redmond95
+gtk2-engines-smooth
+gtk2-engines-thinice
+heimdal-dev
+ia32-libs-gtk
+ia32-libs-kde
+ia32-libs-openoffice.org
+idle-python2.4
+ijsgimpprint
+ijsgutenprint
+installation-guide-hppa
+irssi-text
+kde-style-lipstik
+klaptopdaemon
+kmplayer-doc
 lam4-dev
 lam4c2
+libaltlinuxhyph-dev
+libasn1-6-heimdal
+libcompfaceg1
+libcompfaceg1-dev
+libdvdnav-dev
+libdvdnav4
+libdvdread3
 libgd-gd2-noxpm-perl
-libgmime2.1
-libgmime2.1-cil
+libgnujaxp-java
+libgnujaxp-java-doc
+libgnujaxp-jni
 libgnutls12
+libgssapi4-heimdal
+libhdb7-heimdal
+libkadm5clnt4-heimdal
+libkadm5srv7-heimdal
+libkafs0-heimdal
+libkrb5-17-heimdal
 libmpich1.0-dev
 libmpich1.0c2
+libmythes0
 libnetcdf++3
 libnetcdf3
 libpgtcl-dev
@@ -25,18 +75,69 @@ libpgtcl1.5
 libreiserfs0.3-0
 libreiserfs0.3-dbg
 libreiserfs0.3-dev
+libroken16-heimdal
+libstdc++6-4.0-dbg
+libstdc++6-4.0-dev
+libstdc++6-4.0-doc
+libstdc++6-dbg
+libstdc++6-dev
+libsyck0-dev
+libtasn1-2
+libtasn1-2-dev
+libtest-builder-tester-perl
 libunicode-string-perl
 libxaw6
 libxaw6-dbg
+libxine-main1
+memtester
+menu-xdg
+mgetty
+mgetty-fax
+mklibs-copy
 mono-classlib-2.0
+mozilla-firefox
+mozilla-firefox-locale-eu
+mozilla-firefox-locale-lt
+mozilla-firefox-locale-mn
+mozilla-firefox-locale-nb-no
+mozilla-thunderbird-locale-ca
+mozilla-thunderbird-locale-de
+mozilla-thunderbird-locale-fr
+mozilla-thunderbird-locale-it
+mozilla-thunderbird-locale-nl
+mozilla-thunderbird-locale-pl
+mozilla-thunderbird-locale-uk
 mpi-doc
 mpich-bin
+nagios-common
+nagios-mysql
+nagios-pgsql
+nagios-plugins
+nagios-plugins-basic
+nagios-plugins-standard
+nagios-text
 netcdfg-dev
+pcmcia-cs
+procinfo
+publib-dev
+python-gadfly
+python-htmltmpl
+python-kjbuckets
 python-netcdf
+python-numeric-ext
 python-parted
 python-pgsql
 python-scientific-doc
+python-soappy
+python-stats
+python-syck
+readahead-list
 sdf-doc
+springgraph
+sysutils
 tcl8.0
 tcl8.0-dev
+tcsh
 tk8.0
+x-window-system-core
+xfmedia
