* utils/demoted.cfg:   - added nvidia-glx-legacy{-dev} by hand (because I don't want to wait     for the archive to catch up)

--- a/utils/demoted.cfg
+++ b/utils/demoted.cfg
@@ -117,6 +117,8 @@ nagios-plugins-basic
 nagios-plugins-standard
 nagios-text
 netcdfg-dev
+nvidia-glx-legacy
+nvidia-glx-legacy-dev
 pcmcia-cs
 procinfo
 publib-dev
