--- a/debian/control
+++ b/debian/control
@@ -1,13 +1,15 @@
 Source: update-manager
 Section: gnome
 Priority: optional
+XS-Python-Version: all
 Maintainer: Michael Vogt <michael.vogt@ubuntu.com>
 Build-Depends-Indep: debhelper (>= 4.0.0), libxml-parser-perl, scrollkeeper, intltool, python-dev
-Standards-Version: 3.6.2
+Standards-Version: 3.7.2
 
 Package: update-manager
 Architecture: all
-Depends: ${python:Depends}, ${misc:Depends}, python, python-glade2, python-apt (>= 0.6.16.2), synaptic (>= 0.57.8), lsb-release,  python-gnupginterface, unattended-upgrades, gksu, iso-codes, python-dbus, python-vte, gksu, python-gconf
+XB-Python-Version: ${python:Versions}
+Depends: ${python:Depends}, ${misc:Depends}, python, python-glade2, python-apt (>= 0.6.16.2), synaptic (>= 0.57.8), lsb-release,  python-gnupginterface, gksu, python-dbus, python-vte, gksu, python-gconf, python-aptsources
 Description: GNOME application that manages apt updates
  This is the GNOME apt update manager. It checks for updates and lets the user
  choose which to install.
