--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ help=True
 [build_l10n]
 domain=update-manager
 merge_desktop_files=[("share/applications", ("data/update-manager.desktop.in",))]
-merge_schemas_files=[(("share/gconf/schemas", (data/update-manager.schemas.in",))]
+merge_schemas_files=[("share/gconf/schemas", ("data/update-manager.schemas.in",))]
 
 [sdist]
 formats = bztar
