* removed obsolete symlinks to aptsources and DistInfo * add python-distutils-extra as a build dep

--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: gnome
 Priority: optional
 XS-Python-Version: all
 Maintainer: Michael Vogt <michael.vogt@ubuntu.com>
-Build-Depends-Indep: debhelper (>= 4.0.0), libxml-parser-perl, scrollkeeper, intltool, python-dev
+Build-Depends-Indep: debhelper (>= 4.0.0), libxml-parser-perl, scrollkeeper, intltool, python-dev, python-distutils-extra
 Standards-Version: 3.7.2
 
 Package: update-manager
