Add build rule for .ui files

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: update-manager
 Section: gnome
 Priority: optional
 Maintainer: Michael Vogt <michael.vogt@ubuntu.com>
-Build-Depends-Indep: debhelper (>= 4.0.0), libxml-parser-perl, scrollkeeper, intltool, python-dev
+Build-Depends-Indep: debhelper (>= 4.0.0), libxml-parser-perl, scrollkeeper, intltool, python-dev, python-kde3-dev
 Standards-Version: 3.6.2
 
 Package: update-manager
