--- a/debian/control
+++ b/debian/control
@@ -3,14 +3,14 @@ Section: gnome
 Priority: optional
 XS-Python-Version: all
 Maintainer: Michael Vogt <michael.vogt@ubuntu.com>
-Build-Depends: debhelper (>= 5.0.38), python-dev, python-central (>= 0.5.6), python-kde3-dev, python-distutils-extra
+Build-Depends: debhelper, python-dev, python-central (>= 0.5.6), python-kde3-dev, python-distutils-extra
 Build-Depends-Indep: libxml-parser-perl, scrollkeeper, intltool
 Standards-Version: 3.7.2
 
 Package: update-manager
 Architecture: all
 XB-Python-Version: ${python:Versions}
-Depends: ${python:Depends}, ${misc:Depends}, python, python-glade2, python-apt (>= 0.6.16.2), synaptic (>= 0.57.8), lsb-release,  python-gnupginterface, gksu, python-dbus, python-vte, gksu, python-gconf, python-aptsources
+Depends: ${python:Depends}, ${misc:Depends}, python, python-glade2, python-apt (>= 0.6.16.2), synaptic (>= 0.57.8), lsb-release,  python-gnupginterface, gksu, python-dbus, python-vte, gksu, python-gconf
 Description: GNOME application that manages apt updates
  This is the GNOME apt update manager. It checks for updates and lets the user
  choose which to install.
