--- a/debian/rules
+++ b/debian/rules
@@ -17,9 +17,11 @@ $(patsubst %,binary-install/%,$(DEB_PACKAGES)) :: binary-install/%:
 	$(if $(wildcard /usr/bin/dh_iconcache),dh_iconcache -p$(cdbs_curpkg) $(DEB_DH_DESKTOP_ARGS))
 endif
 
-arch-build::
-        rm -rf debian/arch-build
-        mkdir debian/arch-build
-        bzr checkout --lightweight . debian/arch-build/$(PKG)-$(DEBVER)
-        (cd debian/arch-build/$(PKG)-$(DEBVER) && $(DEB_BUILD_PROG))
 
+DEB_BUILD_PROG:=debuild --preserve-envvar PATH --preserve-envvar CCACHE_DIR -us -uc $(DEB_BUILD_PROG_OPTS)
+
+arch-build::
+	rm -rf debian/arch-build
+	mkdir debian/arch-build
+	bzr checkout --lightweight . debian/arch-build/$(DEB_SOURCE_PACKAGE)-$(DEB_VERSION)
+	(cd debian/arch-build/$(DEB_SOURCE_PACKAGE)-$(DEB_VERSION) && $(DEB_BUILD_PROG))
