make the ubuntu-desktop profile ec2 capable, add TODO

--- a/AutoUpgradeTester/profile/ubuntu/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/ubuntu/DistUpgrade.cfg
@@ -58,6 +58,7 @@ BasePkg = ubuntu-desktop
 Mirror = http://archive.ubuntu.com/ubuntu
 Proxy=http://192.168.1.1:3128/
 ForceOverwrite=no
+RealReboot=no
 Components=main,restricted
 Pockets=security,updates
 SSHKey=ssh-key
@@ -67,3 +68,8 @@ CacheBaseImage=yes
 UpgradeFromDistOnBootstrap=true
 WorkaroundNetworkManager=true
 ;AddRepo=testing.list
+
+[EC2]
+AMI=ami-44bb5c2d
+SSHKey=./ec2-keypair.pem
+ApiToolsPath=./ec2bin
