--- a/AutoUpgradeTester/profile/server/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/server/DistUpgrade.cfg
@@ -57,7 +57,9 @@ CacheBaseImage=yes
 [EC2]
 AMI=ami-44bb5c2d
 SSHKey=./ec2-keypair.pem
-ApiToolsPath=./ec2bin
+;Specify the security groups you want attached to
+;the instance. For example:
+;SecurityGroups = ssh,web
 
 [CHROOT]
 Tempdir=/tmp/upgrade-tester
