Wrote plugin, based on Michael Vogt's code, to add a missing nfs-common package.

--- a/Janitor/Makefile
+++ b/Janitor/Makefile
@@ -25,6 +25,7 @@ check-has-unit-tests:
 	find computerjanitor plugins -name '*.py' ! -name '*_tests.py' | \
 	grep -Exv '^computerjanitor/(__init__|ui_gtk).py' | \
 	grep -Exv '^plugins/(remove_lilo|check_admin_group)_plugin.py' | \
+	grep -Exv '^plugins/(add_nfs_common)_plugin.py' | \
 	sed 's/\.py$$//' | \
 	while read file; do \
 	    [ -e $${file}_tests.py ] || \
