* add [aufs] section to DistUpgrade.cfg and support   EnableFullOverlay, EnableChrootOverlay vars (currently   mutaly exclusive) * add support for setupAufsChroot() so that we can run only   dpkg in the aufs chroot. the only downside of this approach   is that it will not have /etc/apt/sources.list in the snapshot   when we want to revert * support setupAufsChroot() in DistUpgradeView.run() after the   fork

--- a/DistUpgrade/DistUpgrade.cfg
+++ b/DistUpgrade/DistUpgrade.cfg
@@ -82,6 +82,11 @@ Components=main,restricted,universe,multiverse
 ;SourcesList-ia64=prerequists-sources.ports.list
 ;SourcesList-hppa=prerequists-sources.ports.list
 
+[Aufs]
+; this is a xor option, either full or chroot overlay
+;EnableChrootOverlay=yes
+;EnableFullOverlay=yes
+
 [Network]
 MaxRetries=3
 
