DistUpgrade/DistUpgrade.cfg: add EnableChrootRsync option into the example

--- a/DistUpgrade/DistUpgrade.cfg
+++ b/DistUpgrade/DistUpgrade.cfg
@@ -86,6 +86,7 @@ Components=main,restricted,universe,multiverse
 ; this is a xor option, either full or chroot overlay
 ;EnableChrootOverlay=yes
 ;EnableFullOverlay=yes
+;EnableChrootRsync=yes
 
 [Network]
 MaxRetries=3
