make the chroot dir and chroot rw dir configurable

--- a/DistUpgrade/DistUpgrade.cfg
+++ b/DistUpgrade/DistUpgrade.cfg
@@ -84,9 +84,14 @@ Components=main,restricted,universe,multiverse
 
 [Aufs]
 ; this is a xor option, either full or chroot overlay
-;EnableChrootOverlay=yes
 ;EnableFullOverlay=yes
+;EnableChrootOverlay=yes
+; sync changes from the chroot back to the real system
 ;EnableChrootRsync=yes
+; what chroot dir to use
+;ChrootDir=/tmp/upgrade-chroot
+; the RW dir to use (either for full overlay or chroot overlay)
+;RWDir=/tmp/upgrade-rw
 
 [Network]
 MaxRetries=3
