* make it work when installed system wide

--- a/AutoUpgradeTester/profile/server/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/server/DistUpgrade.cfg
@@ -16,16 +16,16 @@ AllowUnauthenticated=yes
 ;EnableChrootRsync=yes
 
 [Sources]
-From=intrepid
-To=jaunty
+From=jaunty
+To=karmic
 
 [NonInteractive]
 ProfileName=server
 BasePkg = ubuntu-standard
 AdditionalPkgs = pkgs.cfg
-;Mirror = http://archive.ubuntu.com/ubuntu
-Mirror = http://us.ec2.archive.ubuntu.com/ubuntu
-;Proxy=http://192.168.1.1:3128/
+Mirror = http://archive.ubuntu.com/ubuntu
+;Mirror = http://us.ec2.archive.ubuntu.com/ubuntu
+Proxy=http://192.168.1.1:3128/
 ForceOverwrite=no
 SSHKey=ssh-key
 Components=main,restricted
@@ -37,7 +37,7 @@ UpgradeFromDistOnBootstrap=true
 Virtio=True
 VncNum=1
 SshPort=54322
-BaseImage=jeos/intrepid-i386.qcow2
+BaseImage=jeos/jaunty-i386.qcow2
 ;SwapImage=jeos/swap.qcow2
 CacheBaseImage=yes
 
