--- a/AutoUpgradeTester/profile/ubuntu/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/ubuntu/DistUpgrade.cfg
@@ -17,13 +17,13 @@ Proxy=http://192.168.1.1:3128/
 ForceOverwrite=no
 Components=main,restricted
 Pockets=security,updates
-SSHKey=ssh-key
+SSHKey=/var/cache/auto-upgrade-tester/ssh-key
 UpgradeFromDistOnBootstrap=true
 WorkaroundNetworkManager=true
 RealReboot=yes
 ;AddRepo=testing.list
 
 [KVM]
-BaseImage=jeos/intrepid-i386.qcow2
+BaseImage=/var/cache/auto-upgrade-tester/jaunty-i386.qcow2
 CacheBaseImage=yes
 ;SwapImage=jeos/swap.qcow2
