fix the ubuntu profile, make auto-upgrade-tester -a work

--- a/AutoUpgradeTester/profile/ubuntu/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/ubuntu/DistUpgrade.cfg
@@ -2,8 +2,8 @@
 View=DistUpgradeViewNonInteractive
 
 [Sources]
-From=intrepid
-To=jaunty
+From=jaunty
+To=karmic
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 Components=main,restricted,universe,multiverse
