--- a/AutoUpgradeTester/profile/server/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/server/DistUpgrade.cfg
@@ -25,7 +25,7 @@ BasePkg = ubuntu-standard
 AdditionalPkgs = pkgs.cfg
 Mirror = http://archive.ubuntu.com/ubuntu
 ;Mirror = http://us.ec2.archive.ubuntu.com/ubuntu
-Proxy=http://192.168.1.1:3128/
+;Proxy=http://192.168.1.1:3128/
 ForceOverwrite=no
 SSHKey=/var/cache/auto-upgrade-tester/ssh-key
 Components=main,restricted
