--- a/AutoUpgradeTester/profile/ubuntu/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/ubuntu/DistUpgrade.cfg
@@ -13,7 +13,7 @@ ProfileName = ubuntu
 BasePkg = ubuntu-desktop
 ;AdditionalPkgs = additional_pkgs.cfg
 Mirror = http://archive.ubuntu.com/ubuntu
-Proxy=http://192.168.1.1:3128/
+;Proxy=http://192.168.1.1:3128/
 ForceOverwrite=no
 Components=main,restricted
 Pockets=security,updates
