Get environment right

--- a/AutoUpgradeTester/profile/server/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/server/DistUpgrade.cfg
@@ -26,7 +26,8 @@ SSHKey=ssh-key
 Components=main,restricted
 Pockets=security,updates
 UpgradeFromDistOnBootstrap=true
-;AddRepo=local_testing.list
+AddRepo=landscape.list
+RealReboot=no
 
 [KVM]
 Virtio=True
@@ -37,11 +38,14 @@ BaseImage=jeos/intrepid-i386.qcow2
 CacheBaseImage=yes
 
 [EC2]
-AMI=ami-44bb5c2d
-SSHKey=./ec2-keypair.pem
+; Ubuntu official images:
+; https://help.ubuntu.com/community/EC2StartersGuide#Getting%20the%20images
+AMI=ami-5059be39
+SSHKey=/home/andreas/aws/ssh-keys/ec2-keypair.pem
 ;Specify the security groups you want attached to
 ;the instance. For example:
 ;SecurityGroups = ssh,web
+SecurityGroups = ssh
 
 [CHROOT]
 Tempdir=/tmp/upgrade-tester
